--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "dashboard/Module": ["apps/dashboard/src/remote-entry.ts"],
+      "invoice/Module": ["apps/invoice/src/remote-entry.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
